--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 bin
 obj
+_ReSharper*
+.gitignore~
+*.suo
 
 # mstest test results
 TestResults
