Adding unit test framework

--- a/WPNest/WPNest/packages.config
+++ b/WPNest/WPNest/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Microsoft.Bcl" version="1.0.11-beta" targetFramework="wp71" />
   <package id="Microsoft.Bcl.Async" version="1.0.12-beta" targetFramework="wp71" />
+  <package id="SharpGIS.GZipWebClient" version="1.2" targetFramework="wp71" />
+  <package id="silverlight.unittest.wp7" version="3.0.40609.1000" targetFramework="wp71" />
 </packages>
