--- a/WPNest/WPNest/packages.config
+++ b/WPNest/WPNest/packages.config
@@ -3,4 +3,6 @@
   <package id="Microsoft.Bcl" version="1.0.11-beta" targetFramework="wp71" />
   <package id="Microsoft.Bcl.Async" version="1.0.12-beta" targetFramework="wp71" />
   <package id="SharpGIS.GZipWebClient" version="1.2" targetFramework="wp71" />
+  <package id="WPtoolkit" version="4.2012.10.30" targetFramework="wp71" />
+  <package id="WPToolkitTestFx" version="4.2012.11.07" targetFramework="wp71" />
 </packages>
