--- a/WPNest/packages/repositories.config
+++ b/WPNest/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\WPNest8\packages.config" />
   <repository path="..\WPNest\packages.config" />
 </repositories>
