--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -122,6 +122,7 @@
     <Compile Include="MainPageViewModel.cs" />
     <Compile Include="ServiceContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ContentType.cs" />
     <Compile Include="Services\GetStatusResult.cs" />
     <Compile Include="Services\GetTemperatureResult.cs" />
     <Compile Include="Services\INestWebService.cs" />
