Storing session for later

--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -126,9 +126,14 @@
     <Compile Include="Services\GetStatusResult.cs" />
     <Compile Include="Services\GetTemperatureResult.cs" />
     <Compile Include="Services\INestWebService.cs" />
+    <Compile Include="Services\ISessionProvider.cs" />
+    <Compile Include="Services\ISettingsProvider.cs" />
     <Compile Include="Services\JsonParsingException.cs" />
     <Compile Include="Services\LoginResult.cs" />
     <Compile Include="Services\NestWebService.cs" />
+    <Compile Include="Services\SessionExpiredException.cs" />
+    <Compile Include="Services\SessionProvider.cs" />
+    <Compile Include="Services\SettingsProvider.cs" />
     <Compile Include="Services\Structure.cs" />
     <Compile Include="Services\Thermostat.cs" />
     <Compile Include="Services\WebServiceResult.cs" />
