--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -125,9 +125,11 @@
     <Compile Include="NestViewModel.cs" />
     <Compile Include="ServiceContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BufferedWebService.cs" />
     <Compile Include="Services\ContentType.cs" />
     <Compile Include="Services\GetStatusResult.cs" />
-    <Compile Include="Services\GetTemperatureResult.cs" />
+    <Compile Include="Services\GetThermostatStatusResult.cs" />
+    <Compile Include="Services\IBufferedWebService.cs" />
     <Compile Include="Services\INestWebService.cs" />
     <Compile Include="Services\ISessionProvider.cs" />
     <Compile Include="Services\ISettingsProvider.cs" />
