--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -66,17 +66,12 @@
     </Reference>
     <Reference Include="Microsoft.Expression.Controls" />
     <Reference Include="Microsoft.Expression.Drawing" />
-    <Reference Include="Microsoft.Expression.Interactions" />
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Controls.Toolkit, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b772ad94eb9ca604, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\WPtoolkit.4.2012.10.30\lib\sl4-windowsphone71\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Phone.Interop" />
-    <Reference Include="Microsoft.Phone.Toolkit.Testing, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\WPToolkitTestFx.4.2012.11.07\lib\sl4-wp71\Microsoft.Phone.Toolkit.Testing.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.12-beta\lib\sl4-windowsphone71\Microsoft.Threading.Tasks.dll</HintPath>
@@ -88,13 +83,6 @@
     <Reference Include="Microsoft.Threading.Tasks.Extensions.Phone, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.12-beta\lib\sl4-windowsphone71\Microsoft.Threading.Tasks.Extensions.Phone.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTesting.Phone, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\WPToolkitTestFx.4.2012.11.07\lib\sl4-wp71\Microsoft.VisualStudio.QualityTools.UnitTesting.Phone.dll</HintPath>
-    </Reference>
-    <Reference Include="Moq.Silverlight">
-      <HintPath>..\Libraries\Moq\Moq.Silverlight.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Libraries\Newtonsoft.Json.dll</HintPath>
@@ -128,27 +116,27 @@
     <Compile Include="Error\ErrorPage.xaml.cs">
       <DependentUpon>ErrorPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FanMode.cs" />
-    <Compile Include="FanModeToBoolConverter.cs" />
-    <Compile Include="FanModeToLabelConverter.cs" />
-    <Compile Include="HvacMode.cs" />
-    <Compile Include="HvacModeControl.xaml.cs">
+    <Compile Include="Model\FanMode.cs" />
+    <Compile Include="MainPage\FanModeToBoolConverter.cs" />
+    <Compile Include="MainPage\FanModeToLabelConverter.cs" />
+    <Compile Include="Model\HvacMode.cs" />
+    <Compile Include="MainPage\HvacModeControl.xaml.cs">
       <DependentUpon>HvacModeControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="HvacModeToIsCoolEnabledConverter.cs" />
-    <Compile Include="HvacModeToIsHeatEnabledConverter.cs" />
-    <Compile Include="HvacModeToLabelConverter.cs" />
-    <Compile Include="IsAwayToLabelConverter.cs" />
+    <Compile Include="MainPage\HvacModeToIsCoolEnabledConverter.cs" />
+    <Compile Include="MainPage\HvacModeToIsHeatEnabledConverter.cs" />
+    <Compile Include="MainPage\HvacModeToLabelConverter.cs" />
+    <Compile Include="MainPage\IsAwayToLabelConverter.cs" />
     <Compile Include="Login\LoginMessageConverter.cs" />
-    <Compile Include="NestSampleViewModel.cs" />
+    <Compile Include="MainPage\NestSampleViewModel.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Login\LoginControl.xaml.cs">
       <DependentUpon>LoginControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="MainPage\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="NestViewModel.cs" />
+    <Compile Include="MainPage\NestViewModel.cs" />
     <Compile Include="ServiceContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AnalyticsService.cs" />
@@ -169,18 +157,17 @@
     <Compile Include="Services\SessionProvider.cs" />
     <Compile Include="Services\SettingsProvider.cs" />
     <Compile Include="Services\StatusUpdaterService.cs" />
-    <Compile Include="Services\Structure.cs" />
-    <Compile Include="Services\Thermostat.cs" />
+    <Compile Include="Model\Structure.cs" />
+    <Compile Include="Model\Thermostat.cs" />
     <Compile Include="Services\ThermostatStatusEventArgs.cs" />
     <Compile Include="Services\WebServiceError.cs" />
     <Compile Include="Services\WebServiceEventArgs.cs" />
     <Compile Include="Services\WebServiceResult.cs" />
-    <Compile Include="Tests\TestTest.cs" />
-    <Compile Include="TestValueConverter.cs" />
-    <Compile Include="ThermostatControl.xaml.cs">
+    <Compile Include="MainPage\TestValueConverter.cs" />
+    <Compile Include="MainPage\ThermostatControl.xaml.cs">
       <DependentUpon>ThermostatControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="TrueToVisibleConverter.cs" />
+    <Compile Include="MainPage\TrueToVisibleConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -191,7 +178,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="HvacModeControl.xaml">
+    <Page Include="MainPage\HvacModeControl.xaml">
       <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -199,11 +186,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainPage.xaml">
+    <Page Include="MainPage\MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ThermostatControl.xaml">
+    <Page Include="MainPage\ThermostatControl.xaml">
       <Generator>MSBuild:MarkupCompilePass1</Generator>
       <SubType>Designer</SubType>
     </Page>
