--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -141,6 +141,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AnalyticsService.cs" />
     <Compile Include="Services\ContentType.cs" />
+    <Compile Include="Services\DialogProvider.cs" />
+    <Compile Include="Services\IDialogProvider.cs" />
     <Compile Include="Services\INestWebService2.cs" />
     <Compile Include="Services\NestWebService2.cs" />
     <Compile Include="Services\DelayedStatusProvider.cs" />
