--- a/WPNest/WPNest.Test/WPNest.Test.csproj
+++ b/WPNest/WPNest.Test/WPNest.Test.csproj
@@ -174,6 +174,9 @@
     <Compile Include="..\WPNest\Services\IStatusProvider.cs">
       <Link>Services\IStatusProvider.cs</Link>
     </Compile>
+    <Compile Include="..\WPNest\Services\IStatusUpdaterService.cs">
+      <Link>Services\IStatusUpdaterService.cs</Link>
+    </Compile>
     <Compile Include="..\WPNest\Services\LoginResult.cs">
       <Link>Services\LoginResult.cs</Link>
     </Compile>
