--- a/WPNest/WPNest.Test/WPNest.Test.csproj
+++ b/WPNest/WPNest.Test/WPNest.Test.csproj
@@ -174,6 +174,9 @@
     <Compile Include="..\WPNest\Services\IStatusUpdaterService.cs">
       <Link>Services\IStatusUpdaterService.cs</Link>
     </Compile>
+    <Compile Include="..\WPNest\Services\ITimer.cs">
+      <Link>Services\ITimer.cs</Link>
+    </Compile>
     <Compile Include="..\WPNest\Services\IWebRequestProvider.cs">
       <Link>Services\IWebRequestProvider.cs</Link>
     </Compile>
@@ -200,6 +203,9 @@
     </Compile>
     <Compile Include="..\WPNest\Services\ThermostatStatusEventArgs.cs">
       <Link>Services\ThermostatStatusEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\WPNest\Services\TimerWrapper.cs">
+      <Link>Services\TimerWrapper.cs</Link>
     </Compile>
     <Compile Include="..\WPNest\Services\WebRequestProvider.cs">
       <Link>Services\WebRequestProvider.cs</Link>
@@ -252,6 +258,7 @@
     <Compile Include="UnitTests\NestViewModelTest.cs" />
     <Compile Include="UnitTests\NestWebServiceDeserializerTest.cs" />
     <Compile Include="UnitTests\NestWebServiceTest.cs" />
+    <Compile Include="UnitTests\StatusUpdaterServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
