--- a/WPNest/WPNest/WPNest.csproj
+++ b/WPNest/WPNest/WPNest.csproj
@@ -141,8 +141,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AnalyticsService.cs" />
     <Compile Include="Services\INestWebServiceDeserializer.cs" />
+    <Compile Include="Services\ITimer.cs" />
     <Compile Include="Services\IWebRequestProvider.cs" />
     <Compile Include="Services\NestWebServiceDeserializer.cs" />
+    <Compile Include="Services\TimerWrapper.cs" />
     <Compile Include="Services\WebRequestProvider.cs" />
     <Compile Include="Web\ContentType.cs" />
     <Compile Include="Services\DialogProvider.cs" />
