NestViewModel should add timestamp to response string

--- a/WPNest/WPNest.Test/WPNest.Test.csproj
+++ b/WPNest/WPNest.Test/WPNest.Test.csproj
@@ -177,6 +177,9 @@
     <Compile Include="..\WPNest\Services\ITimer.cs">
       <Link>Services\ITimer.cs</Link>
     </Compile>
+    <Compile Include="..\WPNest\Services\ITimestampProvider.cs">
+      <Link>Services\ITimestampProvider.cs</Link>
+    </Compile>
     <Compile Include="..\WPNest\Services\IWebRequestProvider.cs">
       <Link>Services\IWebRequestProvider.cs</Link>
     </Compile>
