--- a/WPNest/WPNest.Test/WPNest.Test.csproj
+++ b/WPNest/WPNest.Test/WPNest.Test.csproj
@@ -99,9 +99,6 @@
     <Compile Include="..\WPNest\MainPage\HvacModeToLabelConverter.cs">
       <Link>MainPage\HvacModeToLabelConverter.cs</Link>
     </Compile>
-    <Compile Include="..\WPNest\MainPage\IExceptionHandler.cs">
-      <Link>MainPage\IExceptionHandler.cs</Link>
-    </Compile>
     <Compile Include="..\WPNest\MainPage\IsAwayToLabelConverter.cs">
       <Link>MainPage\IsAwayToLabelConverter.cs</Link>
     </Compile>
@@ -117,14 +114,8 @@
     <Compile Include="..\WPNest\MainPage\ThermostatControl.xaml.cs">
       <Link>MainPage\ThermostatControl.xaml.cs</Link>
     </Compile>
-    <Compile Include="..\WPNest\MainPage\ThermostatSampleViewModel.cs">
-      <Link>MainPage\ThermostatSampleViewModel.cs</Link>
-    </Compile>
     <Compile Include="..\WPNest\MainPage\ThermostatTickCreator.cs">
       <Link>MainPage\ThermostatTickCreator.cs</Link>
-    </Compile>
-    <Compile Include="..\WPNest\MainPage\ThermostatViewModel.cs">
-      <Link>MainPage\ThermostatViewModel.cs</Link>
     </Compile>
     <Compile Include="..\WPNest\MainPage\TrueToVisibleConverter.cs">
       <Link>MainPage\TrueToVisibleConverter.cs</Link>
@@ -143,9 +134,6 @@
     </Compile>
     <Compile Include="..\WPNest\Model\Thermostat.cs">
       <Link>Model\Thermostat.cs</Link>
-    </Compile>
-    <Compile Include="..\WPNest\Properties\Annotations.cs">
-      <Link>Properties\Annotations.cs</Link>
     </Compile>
     <Compile Include="..\WPNest\ServiceContainer.cs">
       <Link>ServiceContainer.cs</Link>
@@ -264,9 +252,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="IntegrationTests\NestWebServiceIntegrationTest.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="IntegrationTests\NestWebServiceIntegrationTest.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
