Fix FanMode for Duty-cycle

--- a/WPNest/WPNest.WP8/WPNest.WP8.csproj
+++ b/WPNest/WPNest.WP8/WPNest.WP8.csproj
@@ -329,6 +329,7 @@
     <Compile Include="..\WPNest\Web\WebResponseWrapper.cs">
       <Link>Web\WebResponseWrapper.cs</Link>
     </Compile>
+    <Compile Include="MainPage\IsEnabledFanModeConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs" />
   </ItemGroup>
