--- a/WPNest/WPNest.WP8/WPNest.WP8.csproj
+++ b/WPNest/WPNest.WP8/WPNest.WP8.csproj
@@ -179,6 +179,9 @@
     <Compile Include="..\WPNest\MainPage\IsAwayToLabelConverter.cs">
       <Link>MainPage\IsAwayToLabelConverter.cs</Link>
     </Compile>
+    <Compile Include="..\WPNest\MainPage\IsEnabledFanModeConverter.cs">
+      <Link>MainPage\IsEnabledFanModeConverter.cs</Link>
+    </Compile>
     <Compile Include="..\WPNest\MainPage\MainPage.xaml.cs">
       <Link>MainPage\MainPage.xaml.cs</Link>
     </Compile>
@@ -329,7 +332,6 @@
     <Compile Include="..\WPNest\Web\WebResponseWrapper.cs">
       <Link>Web\WebResponseWrapper.cs</Link>
     </Compile>
-    <Compile Include="MainPage\IsEnabledFanModeConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs" />
   </ItemGroup>
